# moq-ffi

./: .gitignore  .gitmodules  ANALYSIS_OVERVIEW.txt  ANALYSIS_SUMMARY.md  CLIPPY_FINDINGS.md  CONNECTION_FIX_SUMMARY.md  DRAFT_07_COMPLIANCE.md  FINAL_PRODUCTION_READINESS_ANALYSIS.md  LICENSE  MOQ_RS_API_ALIGNMENT_ANALYSIS.md  PRODUCTION_READINESS_ACTION_PLAN.md  PRODUCTION_READINESS_ANALYSIS.md  PRODUCTION_READINESS_FINAL_REPORT.md  PRODUCTION_READINESS_INDEX.md  PRODUCTION_READINESS_REVIEW_FOLLOWUP.md  PRODUCTION_READINESS_SUMMARY.md  PRODUCTION_READY_SUMMARY.md  README.md  TEST_COVERAGE_REPORT.md
.cargo/: config.toml
.github/agents/: code-review-agent.md  coding-agent.md
.github/workflows/: build-ffi.yml  integration-tests.yml.example
examples/: README.md  test_client  test_client.c  test_validation.sh
moq_ffi/: Cargo.toml  README.md  TEST_COVERAGE.md
moq_ffi/c_tests/: CMakeLists.txt  README.md
moq_ffi/c_tests/include/: test_framework.h
moq_ffi/c_tests/src/: test_catalog_integration.cpp  test_connection.c  test_error_handling.c  test_framework.c  test_initialization.c  test_lifecycle.c  test_memory_safety.c  test_multi_client_integration.cpp  test_publishing.c  test_pubsub_integration.cpp  test_subscribing.c  test_track_discovery.c
moq_ffi/include/: moq_ffi.h
moq_ffi/src/: backend_moq.rs  backend_stub.rs  lib.rs
moq_ffi/tests/: README.md  cloudflare_relay_integration.rs  debug_connection.rs  local_relay_integration.rs
tools/: MEMORY_LEAK_TESTING.md  package-plugin.ps1  package.ps1  test-memory-leaks.ps1  test-memory-leaks.sh  valgrind-suppressions.supp
