[package]
name = "moq_ffi"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "FFI layer for MoQ Transport - C ABI wrapper for moq-transport"
authors = ["Lifelike & Believable"]

[lib]
# Build both a static library and a Windows DLL (with import lib)
# Also include rlib for Rust integration tests
crate-type = ["staticlib", "cdylib", "rlib"]

# ───────────────────────────────────────────────
# Features
# ───────────────────────────────────────────────
[features]
# Enable full MoQ transport integration (default: IETF Draft 14)
with_moq = [
    "dep:moq-transport",
    "dep:web-transport",
    "dep:web-transport-quinn",
    "dep:tokio",
    "dep:anyhow",
    "dep:once_cell",
    "dep:futures",
    "dep:url",
    "dep:bytes",
    "dep:quinn",
    "dep:rustls",
    "dep:rustls-native-certs"
]

# Use IETF Draft 7 compatible version (Cloudflare production relay)
# Note: Mutually exclusive with with_moq (which uses Draft 14)
with_moq_draft07 = [
    "dep:moq-transport-draft07",
    "dep:web-transport",
    "dep:web-transport-quinn",
    "dep:tokio",
    "dep:anyhow",
    "dep:once_cell",
    "dep:futures",
    "dep:url",
    "dep:bytes",
    "dep:quinn",
    "dep:rustls",
    "dep:rustls-native-certs"
]

# ───────────────────────────────────────────────
# Dependencies
# ───────────────────────────────────────────────
[dependencies]
# MoQ transport stack (IETF Draft 14 - latest from crates.io)
moq-transport = { version = "0.11", optional = true }

# MoQ transport stack (IETF Draft 7 - Cloudflare production)
moq-transport-draft07 = { package = "moq-transport", git = "https://github.com/cloudflare/moq-rs.git", branch = "draft-ietf-moq-transport-07", optional = true }

web-transport = { version = "0.3", optional = true }
web-transport-quinn = { version = "0.3", optional = true }

# Async runtime and utilities
tokio = { version = "1.39", features = ["rt-multi-thread", "macros", "time"], optional = true }
once_cell = { version = "1.19", optional = true }
anyhow = { version = "1.0", optional = true }
futures = { version = "0.3", optional = true }
url = { version = "2.5", optional = true }
bytes = { version = "1.11", optional = true }
quinn = { version = "0.11", optional = true }
rustls = { version = "0.23", features = ["aws-lc-rs"], optional = true }
rustls-native-certs = { version = "0.8", optional = true }

# Logging
log = "0.4"

# ───────────────────────────────────────────────
# Build profile
# ───────────────────────────────────────────────
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = "debuginfo"
panic = "abort"

# ───────────────────────────────────────────────
# Metadata for documentation & CI
# ───────────────────────────────────────────────
[package.metadata]
repository = "https://github.com/lifelike-and-believable/moq-ffi"
readme = "../README.md"

# ───────────────────────────────────────────────
# Notes
# ───────────────────────────────────────────────
# - `cargo build --release`             → builds stub backend (no MoQ)
# - `cargo build --release --features with_moq`
#       → builds full implementation
# - Works across Win/Mac/Linux with MSVC, clang, or gcc as backend C++ compiler.
